--- a/patterns/patterns.tex
+++ b/patterns/patterns.tex
@@ -105,6 +105,25 @@
 \end{tikzpicture}
 
 
+
+\newpage
+\renewcommand{\archlength}{5cm}
+\begin{tikzpicture}
+\newcommand\order{7}
+		\begin{scope}
+			% Do calculation
+			\pgfmathsetmacro{\steplength}{180 / \order}%
+			\foreach \n in {0, \steplength, ..., 149}{\drawarch{\n}}
+		\end{scope}
+\renewcommand\order{9}
+		\begin{scope}[xshift=13cm]
+			% Do calculation
+			\pgfmathsetmacro{\steplength}{180 / \order}%
+			\foreach \n in {0, \steplength, ..., 149}{\drawarch{\n}}
+		\end{scope}
+\end{tikzpicture}
+
+
 \newpage
 \begin{tikzpicture}[scale=2]
 \fill (0, 0) rectangle ++(1, 1);
